--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,10 +25,10 @@ jobs:
 
     - name: Release package
       run: python -m twine upload -u "__token__" -p "${{ secrets.PYPI_API_TOKEN }}" dist/*.tar.gz  dist/*.whl
-      if: ( github.event_name == 'release' && github.event.action == 'published' ) || github.event_name == 'workflow_dispatch'
+      if: ( github.event_name == 'release' && github.event.action == 'published' )
     
     - name: Upload package
       run: |
         echo ${{ secrets.GITHUB_TOKEN }} | gh auth login --with-token
         gh release upload ${{ github.event.release.tag_name }} dist/*.tar.gz  dist/*.whl --clobber
-      if: ( github.event_name == 'release' && github.event.action == 'published' ) || github.event_name == 'workflow_dispatch'
+      if: ( github.event_name == 'release' && github.event.action == 'published' )
