--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -18,6 +18,10 @@ jobs:
     uses: ./.github/workflows/ci.yml
     needs: init
 
+  doc:
+    uses: ./.github/workflows/doc.yml
+    needs: ci
+
   release:
     uses: ./.github/workflows/release.yml
-    needs: ci
+    needs: doc
