--- a/.github/workflows/init.yml
+++ b/.github/workflows/init.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/cache@v3
         with:
           path: ./.venv
-          key: venv
+          key: venv-${{ github.run_id }}
 
       - name: Init dev environment
         run: make dev
