--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/cache@v3
       with:
         path: ./.venv
-        key: venv
+        key: venv-${{ github.run_id }}
 
     - name: Touch dev environment
       run: make touch-dev
