--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,10 +1,49 @@
 repos:
+
 - repo: local
   hooks:
+
     - id: format
+      stages: [commit]
       name: format
       entry: make
       args: ["format"]
+      language: system
+      types: [python]
+      pass_filenames: false
+
+    - id: check-format
+      stages: [push]
+      name: check-format
+      entry: make
+      args: ["check-format"]
+      language: system
+      types: [python]
+      pass_filenames: false
+
+    - id: lint
+      stages: [push]
+      name: lint
+      entry: make
+      args: ["lint"]
+      language: system
+      types: [python]
+      pass_filenames: false
+
+    - id: check-typing
+      stages: [push]
+      name: check-typing
+      entry: make
+      args: ["check-typing"]
+      language: system
+      types: [python]
+      pass_filenames: false
+
+    - id: test
+      stages: [push]
+      name: test
+      entry: make
+      args: ["test"]
       language: system
       types: [python]
       pass_filenames: false
