--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,9 @@ jobs:
 
     - name: Run pylint
       run: make lint
+      
+    - name: Check typing
+      run: make check-typing
 
     - name: Run test
       run: make test-wo-install
