Revert "docs: fix path"
This reverts commit 8f4d8ae56986f8933b29333ff30d44c5a7f4f71d.

--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,9 @@ build
 dist
 *.egg-info
 
-assets/docs/index.md
-assets/docs/coverage
-assets/docs/api
+docs/index.md
+docs/coverage
+docs/api
 .test.*
 
 .venv
