--- a/tools/mkdocs/mkdocs.yml
+++ b/tools/mkdocs/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: ipyvizzu-story
-docs_dir: ../../assets/docs
+docs_dir: ../../docs
 
 repo_url: https://github.com/vizzuhq/ipyvizzu-story
 edit_uri: ""
