--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -58,6 +58,8 @@ jobs:
 
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          ref: gh-pages
 
       - name: Setup Pages
         uses: actions/configure-pages@v1
