--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -51,6 +51,10 @@ jobs:
     environment:
       name: gh-pages
       url: ${{ steps.deployment.outputs.page_url }}
+      
+    permissions:
+      id-token: write
+      contents: read
     
     runs-on: ubuntu-20.04
 
