wf: doc, rename env

--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -49,7 +49,7 @@ jobs:
     needs: publish_doc
     
     environment:
-      name: gh-pages
+      name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
       
     permissions:
