--- a/dev-requirements.in
+++ b/dev-requirements.in
@@ -6,10 +6,15 @@ black[jupyter]
 pylint
 mypy
 coverage
-pdoc
 mkdocs
+mkdocstrings[python]
 mkdocs-material
+mkdocs-autorefs
+mkdocs-section-index
 mkdocs-gen-files
 mkdocs-literate-nav
+mkdocs-jupyter
+pyyaml
+types-pyyaml
 notebook
 streamlit
