--- a/tools/mkdocs/mkdocs.yml
+++ b/tools/mkdocs/mkdocs.yml
@@ -1,5 +1,7 @@
 site_name: ipyvizzu-story
+site_url: https://vizzuhq.github.io/ipyvizzu-story/
 docs_dir: ../../docs
+
 
 repo_url: https://github.com/vizzuhq/ipyvizzu-story
 edit_uri: ""
