--- a/tools/mkdocs/mkdocs.yml
+++ b/tools/mkdocs/mkdocs.yml
@@ -14,6 +14,8 @@ theme:
 
 markdown_extensions:
   - pymdownx.superfences
+  - pymdownx.tasklist:
+      custom_checkbox: true
 
 plugins:
   - search
@@ -44,7 +46,17 @@ nav:
       - docs/index.md
       - Installation: docs/installation.md
       - Tutorial: docs/tutorial.md
-      - Environments: docs/environments.md
+      - Environments:
+          - docs/environments/index.md
+          - Jupyter/IPython:
+              - docs/environments/jupyter/index.md
+              - Jupyter Notebook: docs/environments/jupyter/jupyternotebook.md
+              - docs/environments/jupyter/colab.md
+              - JupyterLab: docs/environments/jupyter/jupyterlab.md
+              - VSCode: docs/environments/jupyter/vscode.md
+          - docs/environments/streamlit.md
+          - docs/environments/panel.md
+          - docs/environments/python.md
   - Examples:
       - examples/index.md
       - Basic example: examples/basic/basic.ipynb
