--- a/tools/mkdocs/mkdocs.yml
+++ b/tools/mkdocs/mkdocs.yml
@@ -53,6 +53,10 @@ nav:
               - Jupyter Notebook: docs/environments/jupyter/jupyternotebook.md
               - docs/environments/jupyter/colab.md
               - JupyterLab: docs/environments/jupyter/jupyterlab.md
+              - docs/environments/jupyter/kaggle.md
+              - docs/environments/jupyter/mode.md
+              - docs/environments/jupyter/noteable.md
+              - Voilà: docs/environments/jupyter/voila.md
               - VSCode: docs/environments/jupyter/vscode.md
           - docs/environments/streamlit.md
           - docs/environments/panel.md
