--- a/tools/mkdocs/mkdocs.yml
+++ b/tools/mkdocs/mkdocs.yml
@@ -52,7 +52,10 @@ nav:
               - docs/environments/jupyter/index.md
               - Jupyter Notebook: docs/environments/jupyter/jupyternotebook.md
               - docs/environments/jupyter/colab.md
+              - DataCamp: docs/environments/jupyter/datacamp.md
+              - docs/environments/jupyter/deepnote.md
               - JupyterLab: docs/environments/jupyter/jupyterlab.md
+              - JupyterLite: docs/environments/jupyter/jupyterlite.md
               - docs/environments/jupyter/kaggle.md
               - docs/environments/jupyter/mode.md
               - docs/environments/jupyter/noteable.md
