--- a/tools/mkdocs/mkdocs.yml
+++ b/tools/mkdocs/mkdocs.yml
@@ -52,6 +52,7 @@ nav:
               - docs/environments/jupyter/index.md
               - Jupyter Notebook: docs/environments/jupyter/jupyternotebook.md
               - docs/environments/jupyter/colab.md
+              - docs/environments/jupyter/databricks.md
               - DataCamp: docs/environments/jupyter/datacamp.md
               - docs/environments/jupyter/deepnote.md
               - JupyterLab: docs/environments/jupyter/jupyterlab.md
