doc: rename api to reference

--- a/tools/mkdocs/mkdocs.yml
+++ b/tools/mkdocs/mkdocs.yml
@@ -70,4 +70,4 @@ nav:
       - examples/index.md
       - Basic example: examples/basic/basic.ipynb
       - Complex example: examples/complex/complex.ipynb
-  - API: api/ipyvizzustory/
+  - Reference: reference/ipyvizzustory/
