doc: fix mkdocs config

--- a/tools/mkdocs/mkdocs.yml
+++ b/tools/mkdocs/mkdocs.yml
@@ -45,8 +45,8 @@ nav:
   - Home: index.md
   - Documentation:
       - docs/index.md
-      - Installation: docs/installation.md
-      - Tutorial: docs/tutorial.md
+      - docs/installation.md
+      - docs/tutorial.md
       - Environments:
           - docs/environments/index.md
           - Jupyter/IPython:
