doc: add mdformat

--- a/dev-requirements.in
+++ b/dev-requirements.in
@@ -7,6 +7,15 @@ pylint
 mypy
 ddt
 coverage
+mdformat
+mdformat-beautysh
+mdformat-black
+mdformat-config
+mdformat-web
+mdformat-gfm
+mdformat-tables
+mdformat-frontmatter
+mdformat-footnote
 mkdocs
 mkdocstrings[python]
 mkdocs-material
