--- a/tools/mkdocs/mkdocs.yml
+++ b/tools/mkdocs/mkdocs.yml
@@ -4,7 +4,7 @@ site_url: https://vizzuhq.github.io/ipyvizzu-story/
 docs_dir: ../../docs
 
 repo_url: https://github.com/vizzuhq/ipyvizzu-story
-edit_uri: ""
+edit_uri: https://github.com/vizzuhq/ipyvizzu-story/edit/main/docs
 use_directory_urls: false
 
 theme:
