make: fix make install

--- a/tools/mkdocs/mkdocs.yml
+++ b/tools/mkdocs/mkdocs.yml
@@ -35,6 +35,7 @@ plugins:
   - mkdocs-jupyter:
       execute: True
       ignore: ["demo/*.ipynb"]
+      kernel_name: .venv-ipyvizzu-story
       ignore_h1_titles: True
       include_source: True
   - gen-files:
@@ -72,4 +73,7 @@ nav:
       - examples/index.md
       - Basic example: examples/basic/basic.ipynb
       - Complex example: examples/complex/complex.ipynb
+      - Themes:
+          - examples/themes/index.md
+          - Dark Theme: examples/themes/dark_theme.ipynb
   - Reference: reference/ipyvizzustory/
