--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -23,7 +23,7 @@ jobs:
 
       - uses: actions/cache@v3
         with:
-          path: ./.venv
+          path: ./.venv-ipyvizzu-story
           key: venv-${{ github.run_id }}
 
       - name: Touch dev environment
