--- a/.github/workflows/init.yml
+++ b/.github/workflows/init.yml
@@ -14,7 +14,7 @@ jobs:
 
       - uses: actions/cache@v3
         with:
-          path: ./.venv
+          path: ./.venv-ipyvizzu-story
           key: venv-${{ github.run_id }}
 
       - name: Init dev environment
