--- a/tools/mkdocs/mkdocs.yml
+++ b/tools/mkdocs/mkdocs.yml
@@ -49,30 +49,28 @@ plugins:
 
 nav:
   - Home: index.md
-  - Documentation:
-      - docs/index.md
-      - docs/installation.md
-      - docs/tutorial.md
-      - Environments:
-          - docs/environments/index.md
-          - Jupyter/IPython:
-              - docs/environments/jupyter/index.md
-              - Jupyter Notebook: docs/environments/jupyter/jupyternotebook.md
-              - docs/environments/jupyter/colab.md
-              - docs/environments/jupyter/databricks.md
-              - DataCamp: docs/environments/jupyter/datacamp.md
-              - docs/environments/jupyter/deepnote.md
-              - JupyterLab: docs/environments/jupyter/jupyterlab.md
-              - JupyterLite: docs/environments/jupyter/jupyterlite.md
-              - docs/environments/jupyter/kaggle.md
-              - Mercury/mljar: docs/environments/jupyter/mercury.md
-              - docs/environments/jupyter/mode.md
-              - docs/environments/jupyter/noteable.md
-              - Voilà: docs/environments/jupyter/voila.md
-              - VSCode Python: docs/environments/jupyter/vscode.md
-          - docs/environments/streamlit.md
-          - docs/environments/panel.md
-          - docs/environments/python.md
+  - installation.md
+  - tutorial.md
+  - Environments:
+      - environments/index.md
+      - Jupyter/IPython:
+          - environments/jupyter/index.md
+          - Jupyter Notebook: environments/jupyter/jupyternotebook.md
+          - environments/jupyter/colab.md
+          - environments/jupyter/databricks.md
+          - DataCamp: environments/jupyter/datacamp.md
+          - environments/jupyter/deepnote.md
+          - JupyterLab: environments/jupyter/jupyterlab.md
+          - JupyterLite: environments/jupyter/jupyterlite.md
+          - environments/jupyter/kaggle.md
+          - Mercury/mljar: environments/jupyter/mercury.md
+          - environments/jupyter/mode.md
+          - environments/jupyter/noteable.md
+          - Voilà: environments/jupyter/voila.md
+          - VSCode Python: environments/jupyter/vscode.md
+      - environments/streamlit.md
+      - environments/panel.md
+      - environments/python.md
   - Examples:
       - examples/index.md
       - Basic example: examples/basic/basic.ipynb
