workflow: fix coverage

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,11 @@ jobs:
         path: ./.venv-ipyvizzu-story
         key: venv-${{ github.run_id }}
 
+    - uses: actions/cache@v3
+        with:
+          path: ./tests/coverage
+          key: coverage
+
     - name: Touch dev environment
       run: make touch-dev
           
