--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,11 @@ name: CI
 
 on:
   workflow_call:
+    inputs:
+      run_id:
+        type: string
+        required: true
+        default: ${{ github.run_id }}
 
 jobs:
 
@@ -15,12 +20,12 @@ jobs:
     - uses: actions/cache@v3
       with:
         path: ./.venv-ipyvizzu-story
-        key: venv-${{ github.run_id }}
+        key: venv-${{ inputs.run_id }}
 
     - uses: actions/cache@v3
       with:
         path: ./tests/coverage
-        key: coverage
+        key: coverage-${{ inputs.run_id }}
 
     - name: Touch dev environment
       run: make touch-dev
