--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,11 +1,5 @@
 name: CI-CD
 
-inputs:
-  run_id:
-    type: string
-    required: true
-    default: ${{ github.run_id }}
-
 on:
   release:
     types: [published]
@@ -18,16 +12,24 @@ jobs:
 
   init:
     uses: ./.github/workflows/init.yml
+    with:
+      run_id: ${{ github.run_id }}
 
   ci:
     uses: ./.github/workflows/ci.yml
     needs: init
+    with:
+      run_id: ${{ github.run_id }}
 
   doc:
     uses: ./.github/workflows/doc.yml
     needs: ci
+    with:
+      run_id: ${{ github.run_id }}
 
   release:
     uses: ./.github/workflows/release.yml
     secrets: inherit
     needs: doc
+    with:
+      run_id: ${{ github.run_id }}
