--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -8,7 +8,9 @@ on:
         required: true
 
 jobs:
-  publish_doc:
+  build_doc:
+
+    if: github.event_name != 'workflow_dispatch'
 
     runs-on: ubuntu-latest
 
@@ -17,8 +19,43 @@ jobs:
 
       - uses: actions/cache@v3
         with:
+          path: ./.venv-ipyvizzu-story
+          key: venv-${{ inputs.run_id }}
+
+      - uses: actions/cache@v3
+        with:
           path: ./tests/coverage
           key: coverage-${{ inputs.run_id }}
+
+      - uses: actions/cache@v3
+        with:
+          path: ./site
+          key: site-${{ inputs.run_id }}
+
+      - name: Touch dev environment
+        run: make touch-dev
+
+      - name: Set Jupyter kernel
+        run: make install-kernel
+
+      - name: Build documentation
+        run: make doc
+
+  commit_doc:
+
+    if: ( github.event_name == 'release' && github.event.action == 'published' ) || github.event_name == 'workflow_dispatch'
+    
+    needs: build_doc
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - uses: actions/cache@v3
+        with:
+          path: ./site
+          key: site-${{ inputs.run_id }}
 
       - name: Configure git
         run: |
@@ -30,32 +67,17 @@ jobs:
           git branch -f gh-pages
           git switch gh-pages
 
-      - uses: actions/cache@v3
-        with:
-          path: ./.venv-ipyvizzu-story
-          key: venv-${{ inputs.run_id }}
-
-      - name: Touch dev environment
-        run: make touch-dev
-
-      - name: Set Jupyter kernel
-        run: make install-kernel
-
-      - name: Build documentation
-        run: make doc
-
       - name: Push to gh-pages branch
         run: |
           git add -f site
           git commit -am 'docs: update'
           git push -f origin gh-pages
-        if: ( github.event_name == 'release' && github.event.action == 'published' ) || github.event_name == 'workflow_dispatch'
 
   deploy_doc:
 
     if: ( github.event_name == 'release' && github.event.action == 'published' ) || github.event_name == 'workflow_dispatch'
     
-    needs: publish_doc
+    needs: commit_doc
     
     environment:
       name: github-pages
@@ -70,8 +92,7 @@ jobs:
 
     steps:
 
-      - name: Checkout
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
         with:
           ref: gh-pages
 
