--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
 
-  doc:
-    uses: ./.github/workflows/doc.yml
+  doc_publish:
+    uses: ./.github/workflows/doc_publish.yml
     with:
       run_id: ${{ inputs.run_id }}
