--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -36,6 +36,6 @@ jobs:
   release:
     uses: ./.github/workflows/release.yml
     secrets: inherit
-    needs: doc_publish
+    needs: doc_build
     with:
       run_id: ${{ github.run_id }}
