--- a/dev-requirements.in
+++ b/dev-requirements.in
@@ -1,33 +1,59 @@
-pre-commit
+#
+#
+# dev
+#
 pip-tools
-twine
+pre-commit
 black
 black[jupyter]
 pylint
 mypy
 ddt
 coverage
+twine
+#
+#
+# mdformat
+#
 mdformat
+# mdformat codeformatters
 mdformat-beautysh
 mdformat-black
 mdformat-config
 mdformat-web
+# mdformat extensions
 mdformat-gfm
 mdformat-tables
-mdformat-frontmatter
 mdformat-footnote
-mkdocs
-mkdocstrings[python]
-mkdocs-material
-mkdocs-autorefs
-mkdocs-section-index
-mkdocs-gen-files
-mkdocs-literate-nav
-mkdocs-jupyter
-mkdocs-coverage
+mdformat-frontmatter
+mdformat-configurable-black
+#
+#
+# markdown extensions
+#
 mdx_truly_sane_lists
+#
+#
+# mkdocs
+#
+mkdocs
+mkdocs-material
+mkdocs-section-index
+mkdocs-literate-nav
+mkdocs-autorefs
+mkdocstrings[python]
+mkdocs-gen-files
+mkdocs-jupyter
+#
+#
+# yaml
+#
 pyyaml
 types-pyyaml
+#
+#
+# environments
+#
 notebook
 streamlit
 panel
