doc: open ext links on new tab

--- a/tools/mkdocs/mkdocs.yml
+++ b/tools/mkdocs/mkdocs.yml
@@ -30,6 +30,7 @@ extra_css:
   - stylesheets/highlight.css
 
 extra_javascript:
+  - javascripts/extlinks.js
   - //cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.7/build/highlight.min.js
   - javascripts/highlight.js
 
