--- a/tools/mkdocs/mkdocs.yml
+++ b/tools/mkdocs/mkdocs.yml
@@ -63,6 +63,7 @@ plugins:
       implicit_index: true
   - autorefs
   - mkdocstrings:
+      enable_inventory: true
       handlers:
         python:
           paths: [../../src]
@@ -71,6 +72,8 @@ plugins:
             show_root_heading: True
             show_root_members_full_path: True
             show_submodules: True
+          import:
+            - https://docs.python.org/3/objects.inv
   - gen-files:
       scripts:
         - gen_pages.py
