doc: move tutorial into subfolder

--- a/tools/mkdocs/mkdocs.yml
+++ b/tools/mkdocs/mkdocs.yml
@@ -1,5 +1,6 @@
 site_name: ipyvizzu-story
-site_url: https://vizzuhq.github.io/ipyvizzu-story/
+# site_url: https://vizzuhq.github.io/ipyvizzu-story/
+site_url: https://ipyvizzu-story.vizzuhq.com
 copyright: Copyright &copy; 2022-2023 Vizzu
 
 docs_dir: ../../docs
@@ -93,7 +94,7 @@ plugins:
 nav:
   - Home: index.md
   - installation.md
-  - tutorial.md
+  - Tutorial: tutorial/index.md
   - Examples:
       - examples/index.md
       - Basic example: examples/basic/basic.ipynb
