doc: replace site url

--- a/tools/javascripts/package.json
+++ b/tools/javascripts/package.json
@@ -16,7 +16,7 @@
     "type": "git",
     "url": "https://github.com/vizzuhq/ipyvizzu-story.git"
   },
-  "homepage": "https://vizzuhq.github.io/ipyvizzu-story/",
+  "homepage": "https://ipyvizzu-story.vizzuhq.com",
   "url": "https://github.com/vizzuhq/ipyvizzu-story/issues",
   "author": "Vizzu Kft.",
   "license": "Apache-2.0",
