--- a/dev-requirements.in
+++ b/dev-requirements.in
@@ -22,6 +22,7 @@ mdformat-black
 mdformat-config
 mdformat-web
 # mdformat extensions
+mdformat-admon
 mdformat-gfm
 mdformat-tables
 mdformat-footnote
