--- a/tools/mkdocs/mkdocs.yml
+++ b/tools/mkdocs/mkdocs.yml
@@ -101,7 +101,7 @@ nav:
   - Code reference: reference/ipyvizzustory/
   - Environments:
       - environments/index.md
-      - Jupyter/IPython:
+      - Notebooks:
           - environments/jupyter/index.md
           - Jupyter Notebook: environments/jupyter/jupyternotebook.md
           - environments/jupyter/colab.md
@@ -111,14 +111,21 @@ nav:
           - JupyterLab: environments/jupyter/jupyterlab.md
           - JupyterLite: environments/jupyter/jupyterlite.md
           - environments/jupyter/kaggle.md
-          - Mercury/mljar: environments/jupyter/mercury.md
           - environments/jupyter/mode.md
           - environments/jupyter/noteable.md
-          - PyCharm: environments/jupyter/pycharm.md
+      - App platforms:
+          - environments/platform/index.md
+          - environments/streamlit.md
+          - environments/panel.md
+          - Mercury/mljar: environments/jupyter/mercury.md
           - Voilà: environments/jupyter/voila.md
+      - BI tools:
+          - environments/bi/index.md
+          - environments/jupyter/mode.md
+      - IDEs:
+          - environments/ide/index.md
+          - PyCharm: environments/jupyter/pycharm.md
           - VSCode Python: environments/jupyter/vscode.md
-      - environments/streamlit.md
-      - environments/panel.md
       - environments/python.md
   - Development:
       - dev/index.md
