doc: fix env ide urls

--- a/tools/mkdocs/mkdocs.yml
+++ b/tools/mkdocs/mkdocs.yml
@@ -123,8 +123,8 @@ nav:
           - environments/bi/mode.md
       - IDEs:
           - environments/ide/index.md
-          - PyCharm: environments/jupyter/pycharm.md
-          - VSCode Python: environments/jupyter/vscode.md
+          - PyCharm: environments/ide/pycharm.md
+          - VSCode Python: environments/ide/vscode.md
       - environments/python.md
   - Development:
       - dev/index.md
