--- a/tools/mkdocs/mkdocs.yml
+++ b/tools/mkdocs/mkdocs.yml
@@ -26,13 +26,13 @@ theme:
     - navigation.footer
 
 extra_css:
-  - stylesheets/vizzu.css
-  - stylesheets/highlight.css
+  - assets/stylesheets/vizzu.css
+  - assets/stylesheets/highlight.css
 
 extra_javascript:
-  - javascripts/extlinks.js
+  - assets/javascripts/extlinks.js
   - //cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.7/build/highlight.min.js
-  - javascripts/highlight.js
+  - assets/javascripts/highlight.js
 
 extra:
   social:
