--- a/tools/mkdocs/mkdocs.yml
+++ b/tools/mkdocs/mkdocs.yml
@@ -115,6 +115,7 @@ nav:
       - App platforms:
           - environments/platform/index.md
           - environments/platform/streamlit.md
+          - environments/platform/flask.md
           - environments/platform/panel.md
           - Mercury/mljar: environments/platform/mercury.md
           - Voilà: environments/platform/voila.md
