--- a/tools/javascripts/package.json
+++ b/tools/javascripts/package.json
@@ -18,7 +18,7 @@
   },
   "homepage": "https://ipyvizzu-story.vizzuhq.com",
   "url": "https://github.com/vizzuhq/ipyvizzu-story/issues",
-  "author": "Vizzu Kft.",
+  "author": "Vizzu Inc.",
   "license": "Apache-2.0",
   "dependencies": {
     "npm-run-all": "*",
