doc: set copyright

--- a/tools/mkdocs/mkdocs.yml
+++ b/tools/mkdocs/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: ipyvizzu-story
 site_url: https://ipyvizzu-story.vizzuhq.com
-copyright: Copyright &copy; 2022-2023 Vizzu
+copyright: Copyright &copy; 2022-2023 Vizzu Inc.
 
 docs_dir: ../../docs
 
