--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -17,18 +17,13 @@ jobs:
 
       - uses: actions/cache@v3
         with:
-          path: ./.venv-ipyvizzu-story
-          key: venv-${{ inputs.run_id }}
+          path: ./.venv_ipyvizzu_story
+          key: venv-ipyvizzu-story-${{ inputs.run_id }}
 
       - uses: actions/cache@v3
         with:
           path: ./tests/coverage
-          key: coverage-${{ inputs.run_id }}
-
-      - uses: actions/cache@v3
-        with:
-          path: ./site
-          key: site-${{ inputs.run_id }}
+          key: coverage-ipyvizzu-story-${{ inputs.run_id }}
 
       - name: Touch dev environment
         run: make touch-dev
