--- a/.github/workflows/init.yml
+++ b/.github/workflows/init.yml
@@ -18,8 +18,8 @@ jobs:
 
       - uses: actions/cache@v3
         with:
-          path: ./.venv-ipyvizzu-story
-          key: venv-${{ inputs.run_id }}
+          path: ./.venv_ipyvizzu_story
+          key: venv-ipyvizzu-story-${{ inputs.run_id }}
 
       - name: Init dev environment
         run: make dev
