--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,8 +18,8 @@ jobs:
 
     - uses: actions/cache@v3
       with:
-        path: ./.venv-ipyvizzu-story
-        key: venv-${{ inputs.run_id }}
+        path: ./.venv_ipyvizzu_story
+        key: venv-ipyvizzu-story-${{ inputs.run_id }}
 
     - name: Touch dev environment
       run: make touch-dev
@@ -28,7 +28,7 @@ jobs:
       run: make release
 
     - name: Release package
-      run: ./.venv-ipyvizzu-story/bin/python -m twine upload -u "__token__" -p "${{ secrets.PYPI_API_TOKEN }}" dist/*.tar.gz  dist/*.whl
+      run: ./.venv_ipyvizzu_story/bin/python -m twine upload -u "__token__" -p "${{ secrets.PYPI_API_TOKEN }}" dist/*.tar.gz  dist/*.whl
       if: ( github.event_name == 'release' && github.event.action == 'published' )
     
     - name: Upload package
