--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -12,6 +12,9 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    env:
+      PUPPETEER_CACHE_DIR: ${{ github.workspace }}/node_modules/.chromium
+
     steps:
       - uses: actions/checkout@v3
 
@@ -22,11 +25,19 @@ jobs:
 
       - uses: actions/cache@v3
         with:
+          path: ./node_modules
+          key: nodemodules-ipyvizzu-story-${{ github.run_id }}
+
+      - uses: actions/cache@v3
+        with:
           path: ./tests/coverage
           key: coverage-ipyvizzu-story-${{ inputs.run_id }}
 
       - name: Touch dev environment
         run: make touch-dev
+
+      - name: Touch dev-js environment
+        run: make touch-dev-js
 
       - name: Set Jupyter kernel
         run: make install-kernel
