--- a/.github/workflows/init.yml
+++ b/.github/workflows/init.yml
@@ -13,6 +13,9 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    env:
+      PUPPETEER_CACHE_DIR: ${{ github.workspace }}/node_modules/.chromium
+
     steps:
       - uses: actions/checkout@v3
 
@@ -21,5 +24,13 @@ jobs:
           path: ./.venv_ipyvizzu_story
           key: venv-ipyvizzu-story-${{ inputs.run_id }}
 
+      - uses: actions/cache@v3
+        with:
+          path: ./node_modules
+          key: nodemodules-ipyvizzu-story-${{ github.run_id }}
+
       - name: Init dev environment
         run: make dev
+
+      - name: Init dev-js environment
+        run: make dev-js
