--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,8 +40,8 @@ jobs:
     - name: Check format
       run: make check-format
 
-    - name: Run pylint
-      run: make lint
+    - name: Check lint
+      run: make check-lint
       
     - name: Check typing
       run: make check-typing
