--- a/tools/mkdocs/mkdocs.yml
+++ b/tools/mkdocs/mkdocs.yml
@@ -116,7 +116,7 @@ nav:
       - tutorial/index.md
       - tutorial/data.md
       - tutorial/initialization.md
-      - Slides and Steps: tutorial/slides_steps.md
+      - Building blocks: tutorial/building_blocks.md
       - tutorial/export.md
   - Examples:
       - examples/index.md
