doc: add versioning

--- a/tools/mkdocs/mkdocs.yml
+++ b/tools/mkdocs/mkdocs.yml
@@ -41,8 +41,9 @@ extra_javascript:
   - assets/javascripts/notebooklinks.js
 
 extra:
-  #  version:
-  #    provider: mike
+  version:
+    provider: mike
+    default: latest
   social:
     - icon: fontawesome/brands/slack
       name: Vizzu on Slack
@@ -71,7 +72,7 @@ markdown_extensions:
 
 plugins:
   #  - mike:
-  #      version_selector: false
+  #      version_selector: true
   #      alias_type: symlink
   #      canonical_version: latest
   #      redirect_template: ./tools/mkdocs/overrides/mike/redirect.html
