--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,10 +2,6 @@ name: Release
 
 on:
   workflow_call:
-    inputs:
-      run_id:
-        type: string
-        required: true
 
 jobs:
 
@@ -19,7 +15,7 @@ jobs:
     - uses: actions/cache@v3
       with:
         path: ./.venv_ipyvizzu_story
-        key: venv-ipyvizzu-story-${{ inputs.run_id }}
+        key: venv-ipyvizzu-story-${{ github.run_id }}
 
     - name: Touch dev environment
       run: make touch-dev
